2025 day15 part 1 refactor